--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,40 @@
-ul li{
-  list-style-type: georgian;
+.app-wrapper{
+  display: grid;
+
+  grid-template-areas:
+  "h h"
+  "n c";
+
+  grid-template-rows: 60px 1fr;
+  grid-auto-columns: 2fr 10fr;
+  /*grid-gap: 10px;*/
+
+  width: 1720px;
+  margin: 0 auto;
+}
+
+
+.header{
+  grid-area: h;
+  background-color: aquamarine;
+}
+
+
+.nav{
+  grid-area: n;
+  background-color: goldenrod;
+
+}
+
+
+.content{
+  grid-area: c;
+  background-color: chartreuse;
+}
+
+.header img{
+  width: 60px;
+}
+.content img{
+  width: 100%;
 }
