--- a/src/components/Profile/MyPosts/MyPossts.module.css
+++ b/src/components/Profile/MyPosts/MyPossts.module.css
@@ -1,13 +1,22 @@
-.content{
+.content {
     grid-area: c;
     background-color: chartreuse;
 }
 
 
-.content img{
+.content img {
     width: 100%;
 }
 
-.item img{
+.item img {
     width: 80px;
+}
+
+.posts {
+    font-size: 25px;
+    margin-top: 10px;
+}
+
+.postsBlock {
+    padding: 25px;
 }
