--- a/src/components/Profile/MyPosts/post/Possts.module.css
+++ b/src/components/Profile/MyPosts/post/Possts.module.css
@@ -8,10 +8,16 @@
     width: 100%;
 }
 
-.item img{
+.item .ava{
     width: 90px;
     height: 90px;
     border-radius: 50%;
     border-color: #282c34;
     border-style: solid;
+}
+.item img{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+
 }
