--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,12 @@
 .header{
     grid-area: h;
-    background-color: aquamarine;
+    background-color: #33ffbb;
+    border-radius: 20px;
 }
 
 .header img{
-    width: 60px;
+    width: 80px;
+    padding-left: 60px;
+    padding-top: 0px;
+    margin-top: 0px;
 }
