--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,9 +1,10 @@
 .content{
     grid-area: c;
-    background-color: chartreuse;
+    background-color: #2eb38e4a;
+    border-radius: 20px;
 }
 
 
 .content img{
-    width: 100%;
+    width: 953px;
 }
