--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -22,3 +22,12 @@
     transition: 0.1s all;
     transform: translateY(2px);
 }
+
+.selectorPage{
+    font-weight: bold;
+}
+.divSelectorPage{
+    font-size: 25px;
+    margin-left: auto;
+    margin-right: auto;
+}
